--- a/JDK1.8/.classpath
+++ b/JDK1.8/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/jdk1.8.0_20/jre/lib/rt.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.7.0_67/jre/lib/rt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
